fix: decrease spacing between product rows

--- a/causebox-product-app/src/App.css
+++ b/causebox-product-app/src/App.css
@@ -228,7 +228,7 @@ table {
 .collection-item {
   width: 160px;
   height: 350px;
-  margin-top: 40px;
+  margin: 40px 0 -10px 0;
 }
 
 .collection-image-container {
